Fix SVG paths for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <!-- 
          Favicon 
     -->
-    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="shortcut icon"
+      href="/portfolio/images/favicon.svg"
+      type="image/svg+xml"
+    />
 
     <!-- 
          Google Font Link 
